# RazeAndPlunder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.bat  bootstrap.sh  cmake-mingw-gcc.sh  cmake-mingw.sh  cmake-vs2013.bat  cmake-vs2015.bat  cmake-vs2017.bat  toolchain-mingw32.cmake  zip-debug.sh  zip-release.sh
include/: StormLib.h
include/BWAPI/: Constants.h  Position.h  Unit.h  UnitType.h
include/BWTA/: RectangleArray.h
src/: AIloop.cpp  AIloop.h  BWEMUtil.cpp  BWEMUtil.h  BotAILoop.cpp  BotAILoop.h  ClientMain.cpp  Dll.cpp  Geometry.cpp  Geometry.h  Glob.cpp  Glob.h  OpprimoBot.cpp  OpprimoBot.h  PathAB.cpp  PathAB.h  RnpBot.cpp  RnpBot.h  RnpConst.h  RnpRandom.cpp  RnpRandom.h  RnpStateMachine.h  RnpUtil.cpp  RnpUtil.h
src/BWTA2/: BWTA.cpp  BalanceMetrics.cpp  ClosestObjectMap.cpp  Heap.h  LoadData.cpp  LoadData.h  Painter.h  PolygonGenerator.h  PolygonImpl.cpp  PolygonImpl.h  RegionImpl.cpp  RegionImpl.h  TerrainAnalysis.cpp  Utils.h  distanceTransform.cpp  pathfinding.cpp  stdafx.cpp
src/BWTA2OfflineExtractor/: MapFileParser.h
src/Commander/: Commander.cpp  Commander.h  CommanderMsg.h  ExplorationSquad.cpp  ExplorationSquad.h  RnpArmy.cpp  RnpArmy.h  RushSquad.cpp  RushSquad.h  Squad.cpp  Squad.h  SquadMsg.h  StrategySelector.cpp  StrategySelector.h  UnitSetup.cpp  UnitSetup.h
src/Commander/Protoss/: ProtossMain.cpp  ProtossMain.h
src/Commander/Terran/: TerranMain.cpp  TerranMain.h
src/Commander/Zerg/: LurkerRush.cpp  LurkerRush.h  ZergMain.cpp  ZergMain.h
src/Influencemap/: MapManager.cpp  MapManager.h
src/MainAgents/: AgentFactory.cpp  AgentFactory.h  BaseAgent.cpp  BaseAgent.h  BaseAgentMsg.h  RnpMovementMonitor.cpp  RnpMovementMonitor.h  TargetingAgent.cpp  TargetingAgent.h  WorkerAgent.cpp  WorkerAgent.h  WorkerAgentMsg.h
src/Managers/: AgentManager.cpp  AgentManager.h  AgentManagerMsg.h  Agentset.h  BuildingPlacer.cpp  BuildingPlacer.h  BuildplanEntry.cpp  BuildplanEntry.h  Constructor.cpp  Constructor.h  ExplorationManager.cpp  ExplorationManager.h  ResourceManager.cpp  ResourceManager.h  SpottedObject.cpp  SpottedObject.h  Upgrader.cpp  Upgrader.h
src/Pathfinding/: NavigationAgent.cpp  NavigationAgent.h  PFFunctions.cpp  PFFunctions.h  PathObj.cpp  PathObj.h  Pathfinder.cpp  Pathfinder.h
src/StructureAgents/: RefineryAgent.cpp  RefineryAgent.h  StructureAgent.cpp  StructureAgent.h
src/StructureAgents/Protoss/: NexusAgent.cpp  NexusAgent.h
src/StructureAgents/Terran/: CommandCenterAgent.cpp  CommandCenterAgent.h  ComsatAgent.cpp  ComsatAgent.h
src/StructureAgents/Zerg/: HatcheryAgent.cpp  HatcheryAgent.h
src/UnitAgents/: TransportAgent.cpp  TransportAgent.h  UnitAgent.cpp  UnitAgent.h
src/UnitAgents/Protoss/: CarrierAgent.cpp  CarrierAgent.h  CorsairAgent.cpp  CorsairAgent.h  HighTemplarAgent.cpp  HighTemplarAgent.h  ReaverAgent.cpp  ReaverAgent.h
src/UnitAgents/Terran/: BattlecruiserAgent.cpp  BattlecruiserAgent.h  FirebatAgent.cpp  FirebatAgent.h  GhostAgent.cpp  GhostAgent.h  MarineAgent.cpp  MarineAgent.h  MedicAgent.cpp  MedicAgent.h  ScienceVesselAgent.cpp  ScienceVesselAgent.h  SiegeTankAgent.cpp  SiegeTankAgent.h  VultureAgent.cpp  VultureAgent.h  WraithAgent.cpp  WraithAgent.h
src/UnitAgents/Zerg/: DefilerAgent.cpp  DefilerAgent.h  HydraliskAgent.cpp  HydraliskAgent.h  LurkerAgent.cpp  LurkerAgent.h  MutaliskAgent.cpp  MutaliskAgent.h  QueenAgent.cpp  QueenAgent.h
src/Utils/: Config.cpp  Config.h  FileReaderUtils.cpp  FileReaderUtils.h  Profiler.cpp  Profiler.h  ProfilerObj.cpp  ProfilerObj.h  Sets.h  Statistics.cpp  Statistics.h  cthread.cpp  cthread.h
